--- a/index.ipynb
+++ b/index.ipynb
@@ -29,11 +29,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[15, 16, 17, 18, 18, 19, 20, 21]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "# Your answer here \n",
+    "numbers = [19, 18, 21, 16, 15, 17, 20, 18]\n",
+    "mean = sum(numbers)/len(numbers)\n",
+    "# Mean = 18\n",
+    "sorted(numbers)\n",
+    "# Median = 18\n",
+    "# Mode = 18\n",
+    "# Symmetrically distributed"
    ]
   },
   {
@@ -50,11 +68,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[72, 95, 96, 97, 97, 98, 99, 100]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "# Your answer here \n",
+    "numbers = [100, 99, 97, 97, 96, 98, 95, 72]\n",
+    "mean = sum(numbers)/len(numbers)\n",
+    "# Mean = 94.25\n",
+    "sorted(numbers)\n",
+    "# Median = 97\n",
+    "# Mode = 97\n",
+    "# Mean does not describe the middle of the dataset as it is affected by the outlier 72"
    ]
   },
   {
@@ -67,11 +103,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "# Your answer here \n",
+    "numbers = [15, 18, 16]\n",
+    "# sum(numbers) = 49\n",
+    "4 * 17\n",
+    "# Need to achieve 68 books over 4 days (17 * 4). On day 4, need to sell 68 - 49 = 19 books."
    ]
   },
   {
@@ -94,11 +145,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "8"
    ]
   },
   {
@@ -110,11 +172,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "boys = (1 + 6 + 9 + 4)/50 # 40%\n",
+    "girls = (1 + 4 + 3 + 2)/50 # 20%\n",
+    "boys - girls"
    ]
   },
   {
@@ -130,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "0.5 - 0.75"
    ]
   },
   {
@@ -142,19 +217,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# Girls generally spend more time on Facebook, although this is skewed by a minority of girls spending a very large amount of time on Facebook."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -166,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
